--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JYZwPRqhN7ES69FRjs+1S1+H6AxKGguxP948AzLX0x8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -63,3 +63,27 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DB_CACHE_CONNECTION=
+DB_CACHE_LOCK_CONNECTION=
+DB_CACHE_LOCK_TABLE=
+MEMCACHED_PERSISTENT_ID=
+MEMCACHED_USERNAME=
+MEMCACHED_PASSWORD=
+DYNAMODB_ENDPOINT=
+DB_URL=
+MYSQL_ATTR_SSL_CA=
+AWS_URL=
+AWS_ENDPOINT=
+LOG_SLACK_WEBHOOK_URL=
+PAPERTRAIL_URL=
+PAPERTRAIL_PORT=
+LOG_STDERR_FORMATTER=
+REDIS_URL=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+MAIL_URL=
+MAIL_LOG_CHANNEL=
+DB_QUEUE_CONNECTION=
+POSTMARK_MESSAGE_STREAM_ID=
+SQS_SUFFIX=
